clang/test/BSC/Negative/Coroutine/AwaitExpr/await-expr-call-absent/await-expr-call-absent.cbs
// RUN: %clang_cc1 -internal-isystem %S/../../../../../../lib/Headers/bsc_include -verify %s

#include "../../async-func-read-opposite.hbs"

async int f(int start) { 
  await g(); // #1
  int result = await read(1);
  return result;
}

// expected-warning@#1 {{call to undeclared function 'g'; ISO C99 and later do not support implicit function declarations}}
// expected-error@#1 {{the await expression's external function declaration must be modified by async or return 'Future' type}}

int main() {
  return 0;
}